--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -24,7 +24,7 @@
     padding-left: 36px;
     border-radius: 5px;
     border: 1px solid #fff;
-    color: black;
+    color: #fff;
     font-weight: 600;
 }
 .custom-form :hover 
