--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -6,14 +6,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Booking</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap"
           rel="stylesheet">
-    
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="shortcut icon" href="/img/sark.ico">
+    <title>@ViewData["Title"]</title>
     @RenderSection("Styles", required: true)
 </head>
 
@@ -36,7 +35,61 @@
 
                         <nav>
                             <img src="/img/logo.png" class="img-fluid logo-main">
-                            <ul class="navbar-nav ml-md-auto ml-0 desktop-menu">
+                            <ul class="navbar-nav ml-md-auto ml-0">
+                                <li class="nav-item desktop-menu">
+                                    <a class="nav-link" asp-action="Dashboard" asp-controller="AdminOperations">Home</a>
+                                </li>
+                                <li class="nav-item desktop-menu dropdown">
+                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layouts</a>
+                                    <ul class="dropdown-menu">
+                                        @if (_repo.GetProjectsData() != null && _repo.GetProjectsData().Count > 0)
+                                        {
+                                            int i = 1;
+                                            foreach (var project in _repo.GetProjectsData())
+                                            {
+                                                <a class="dropdown-item" asp-action="Index_@i" asp-controller="ProjectLayout" asp-route-id="@project.projectuuid">@project.ProjectName</a>
+                                                i = i + 1;
+                                            }
+                                        }
+                                    </ul>
+                                </li>
+                                <li class="nav-item desktop-menu dropdown">
+                                    <a class="nav-link" asp-action="MyBookings" asp-controller="AdminOperations">My Booking</a>
+                                </li>
+                                <li class="nav-item desktop-menu">
+                                    <a class="nav-link" asp-action="NewBookings" asp-controller="AdminOperations">NewBookings</a>
+                                </li>
+                                <li class="nav-item desktop-menu">
+                                    <a class="nav-link" asp-action="Agents" asp-controller="AdminOperations">Agents</a>
+                                </li>
+                                <li class="nav-item desktop-menu">
+                                    <a class="nav-link" asp-action="AddLayOutData" asp-controller="AdminOperations">Add layout</a>
+                                </li>
+                                <li class="nav-item desktop-menu">
+                                    <a class="nav-link" asp-action="ViewLayout" asp-controller="AdminOperations">Layout Data</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="/img/user.png" style="max-width: 35px; object-fit: cover;" class="user-icon-width"></a>
+                                    <ul class="dropdown-menu header-user-dropdown">
+                                        <a class="dropdown-item" asp-action="Profile" asp-controller="AdminOperations">Profile</a>
+                                        <a class="dropdown-item" asp-action="Logout" asp-controller="AdminLogin">Sign out</a>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+
+
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <nav>
+                            <ul class="navbar-nav ml-md-auto ml-0 mobile-menu mt-4">
                                 <li class="nav-item">
                                     <a class="nav-link" asp-action="Dashboard" asp-controller="AdminOperations">Home</a>
                                 </li>
@@ -55,82 +108,24 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link" asp-action="MyBookings" asp-controller="AdminOperations">My Booking</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-action="NewBookings" asp-controller="AdminOperations">NewBookings</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-action="Agents" asp-controller="AdminOperations">Agents</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-action="AddLayOutData" asp-controller="AdminOperations">Add layout</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" asp-action="ViewLayout" asp-controller="AdminOperations">Layout Data</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-action="Logout" asp-controller="AdminLogin">Logout</a>
-                                </li>
 
-                            </ul>
-                        </nav>
-
-                        
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <nav>
-                            <ul class="navbar-nav ml-md-auto ml-0 mobile-menu mt-4">
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-action="Dashboard" asp-controller="AdminOperation">Home</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layouts</a>
-                                    <ul class="dropdown-menu">
-                                        @if (_repo.GetProjectsData() != null && _repo.GetProjectsData().Count > 0)
-                                        {
-                                            int i = 1;
-                                            foreach (var project in _repo.GetProjectsData())
-                                            {
-                                                <a class="dropdown-item" asp-action="Index_@i" asp-controller="ProjectLayout" asp-route-id="@project.projectuuid">@project.ProjectName</a>
-                                                i = i + 1;
-                                            }
-                                        }
-                                    </ul>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    
                                     <a class="nav-link" asp-action="MyBookings" asp-controller="AdminOperations">My Booking</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-action="AddLayOutData" asp-controller="AdminOperations">Add layout</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" asp-action="ViewLayout" asp-controller="AdminOperations">Layout Data</a>
+                                    <a class="nav-link" asp-action="ViewLayout" asp-controller="AdminOperations">Layout Data</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-action="Logout" asp-controller="AdminLogin">Logout</a>
-                                </li>
-
                             </ul>
                         </nav>
                     </div>
                 </div>
             </div>
         </section>
-
-
         <section class="sidebar">
             <div class="current">
                 <h5 class="booking-title">Current Booking</h5>
-
                 <div class="unit-number-block ">
                     <span class="unit-square">10</span>
                     <span class="unit-square">10</span>
@@ -157,74 +152,75 @@
                 </div>
             </div>
         </section>
-                @RenderBody()
-        </section>
-        
+        @RenderBody()
+    </section>
     <script src="/js/jquery-3.5.1.min.js"></script>
-        <script src="/js/popper.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-
-        <script>
-            $(document).ready(function () {
-                $(".hamburger").click(function () {
-                    $(this).toggleClass("is-active");
-                    $(".sidebar").toggleClass("open-sidebar");
-                    $(".sidebar-menu").toggleClass("open-sidebar");
-                });
-
-                $("#sidebar-menu").click(function () {
-                    $(".sidebar").toggleClass("open-sidebar");
-                });
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
 
-                function makeTimer() {
+
+    <script>
+        $(document).ready(function () {
 
 
-                    var endTime = new Date("29 April 2020 9:56:00 GMT+01:00");
-                    endTime = (Date.parse(endTime) / 1000);
-
-                    var now = new Date();
-                    now = (Date.parse(now) / 1000);
-
-                    var timeLeft = endTime - now;
-
-                    var days = Math.floor(timeLeft / 86400);
-                    var hours = Math.floor((timeLeft - (days * 86400)) / 3600);
-                    var minutes = Math.floor((timeLeft - (days * 86400) - (hours * 3600)) / 60);
-                    var seconds = Math.floor((timeLeft - (days * 86400) - (hours * 3600) - (minutes * 60)));
-
-                    if (hours < "10") { hours = "0" + hours; }
-                    if (minutes < "10") { minutes = "0" + minutes; }
-                    if (seconds < "10") { seconds = "0" + seconds; }
-                    for (var i = 0; i < 10; i++) {
-
-                        $("#hours" + i).html(hours + "&nbsp;:");
-                        $("#minutes" + i).html(minutes + "&nbsp;:");
-                        $("#seconds" + i).html(seconds + "");
-                    }
-                    // $("#days").html(days + "<span>Days</span>");
+            function makeTimer() {
 
 
+                var endTime = new Date("29 April 2020 9:56:00 GMT+01:00");
+                endTime = (Date.parse(endTime) / 1000);
+
+                var now = new Date();
+                now = (Date.parse(now) / 1000);
+
+                var timeLeft = endTime - now;
+
+                var days = Math.floor(timeLeft / 86400);
+                var hours = Math.floor((timeLeft - (days * 86400)) / 3600);
+                var minutes = Math.floor((timeLeft - (days * 86400) - (hours * 3600)) / 60);
+                var seconds = Math.floor((timeLeft - (days * 86400) - (hours * 3600) - (minutes * 60)));
+
+                if (hours < "10") { hours = "0" + hours; }
+                if (minutes < "10") { minutes = "0" + minutes; }
+                if (seconds < "10") { seconds = "0" + seconds; }
+                for (var i = 0; i < 10; i++) {
+
+                    $("#hours" + i).html(hours + "&nbsp;:");
+                    $("#minutes" + i).html(minutes + "&nbsp;:");
+                    $("#seconds" + i).html(seconds + "");
                 }
+                // $("#days").html(days + "<span>Days</span>");
 
-                setInterval(function () { makeTimer(); }, 1000);
 
-                // Toggle plus minus icon on show hide of collapse element
-                $(".collapse").on('show.bs.collapse', function () {
-                    $(this).prev(".card-header").find(".fas").removeClass("fa-caret-up").addClass("fa-caret-down");
-                }).on('hide.bs.collapse', function () {
-                    $(this).prev(".card-header").find(".fas").removeClass("fa-caret-down").addClass("fa-caret-up");
-                });
+            }
 
-                $(".main-body").click(function () {
-                    if ($('.sidebar').hasClass('open-sidebar')) {
-                        $(".sidebar").toggleClass('open-sidebar')
-                        $(".hamburger").toggleClass("is-active");
-                    }
-                });
+            setInterval(function () { makeTimer(); }, 1000);
+
+            // Toggle plus minus icon on show hide of collapse element
+            $(".collapse").on('show.bs.collapse', function () {
+                $(this).prev(".card-header").find(".fas").removeClass("fa-caret-up").addClass("fa-caret-down");
+            }).on('hide.bs.collapse', function () {
+                $(this).prev(".card-header").find(".fas").removeClass("fa-caret-down").addClass("fa-caret-up");
             });
-        </script>
-        @RenderSection("Scripts", required: true)
+
+            $(".hamburger").click(function () {
+                $(this).toggleClass("is-active");
+                $(".sidebar").toggleClass("open-sidebar");
+            });
+
+            $("#sidebar-menu").click(function () {
+                $(".sidebar").toggleClass("open-sidebar");
+            });
+            $(".main-body").click(function () {
+                if ($('.sidebar').hasClass('open-sidebar')) {
+                    $(".sidebar").toggleClass('open-sidebar')
+                    $(".hamburger").toggleClass("is-active");
+                }
+            });
+
+        });
+    </script>
+    @RenderSection("Scripts", required: true)
 
 </body>
 </html>
