--- a/Views/Shared/_ProjectsUnitsData.cshtml
+++ b/Views/Shared/_ProjectsUnitsData.cshtml
@@ -1,53 +1,51 @@
 ﻿@model List<ViewLayoutModel>
-@if (Model != null)
-{
-    <div class="text-center">
-        <h3 ><b></b></h3>
-    </div>
-    <table id="layout-table" class="display responsive" style="width:100%">
-        <thead>
-            <tr>
-                <th>UNIT NO</th>
-                <th>AREA</th>
-                <th>FACING</th>                
-                <th>STATUS</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var unit in Model)
-            {
-                <tr>
-                    <td>@unit.UnitNumber</td>
-                    <td>@unit.UnitSize</td>
-                    <td>@unit.Facing</td>                   
-                    @if (unit.status == "Booked")
-                    {
-                        <td><span class="badge badge-danger">@unit.status </span></td>
-                    }
-                    else if (unit.status == "Reserved")
-                    {
-                        <td><span class="badge badge-warning">@unit.status</span></td>
-                    }
-                    else if (unit.status == "Available")
-                    {
-                        <td><span class="badge badge-success">@unit.status</span></td>
-                    }
-                    else{}
-                </tr>
-            }
-        </tbody>
-        <tfoot>
 
-        </tfoot>
-    </table>
-}
-<script src="https://cdn.datatables.net/v/dt/dt-1.10.22/datatables.min.js"></script>
-<script src="https://cdn.datatables.net/responsive/1.0.7/js/dataTables.responsive.min.js"></script>
-<script src="/js/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/1.0.7/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.10.22/datatables.min.css">
+    @if (Model != null)
+    {
+        <div class="text-center">
+            <h3><b></b></h3>
+        </div>
+        <table id="layout-table" class="display responsive" style="width:100%">
+            <thead>
+                <tr>
+                    <th>UNIT NO</th>
+                    <th>AREA</th>
+                    <th>FACING</th>
+                    <th>STATUS</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var unit in Model)
+                {
+                    <tr>
+                        <td>@unit.UnitNumber</td>
+                        <td>@unit.UnitSize</td>
+                        <td>@unit.Facing</td>
+                        @if (unit.status == "Booked")
+                        {
+                            <td><span class="badge badge-danger">@unit.status </span></td>
+                        }
+                        else if (unit.status == "Reserved")
+                        {
+                            <td><span class="badge badge-warning">@unit.status</span></td>
+                        }
+                        else
+                        {
+                            <td><span class="badge badge-success">@unit.status</span></td>
+                        }
+                    </tr>
+                }
+            </tbody>
+            <tfoot>
+
+            </tfoot>
+        </table>
+    }
+
 <script>
-   
         $(document).ready(function () {
             $('#layout-table').DataTable();
-            GetUnits();
         });
-</script>
+  </script>
