--- a/wwwroot/css/create-agents.css
+++ b/wwwroot/css/create-agents.css
@@ -233,7 +233,7 @@ ul > li
   font-weight: 500;
   color: #47404f;
   display: inline-flex;
-  align-items: baseline;
+  align-items: center;
   font-size: 18px;
 }
 
@@ -245,6 +245,18 @@ ul > li
 .active 
 {
   color:#4E8902 !important;
+}
+
+/* profile-icon */
+.sign-icon-cus{
+  font-size: 30px;
+}
+.header-user-dropdown{
+  /* left: -135px !important; */
+  transform: translate3d(-100px, 48px, 0px) !important;
+}
+.user-icon-width{
+  max-width: 35px;
 }
 /* ============================================================= */
 /* ===========HEADER Design End From Here======================*/
@@ -362,13 +374,14 @@ border-radius: 50%;
 {
     color: #fff; 
 }
-.custom-form {
+.custom-form 
+{
     background: #fff;
     min-height: 44.8px;
     padding-left: 15px;
     border-radius: 5px;
     border: 1px solid #203A43;
-    color: black;
+    color: #fff;
     font-weight: 600;
 }
 .custom-form :hover 
@@ -469,11 +482,41 @@ border-radius: 50%;
 /* ======================================= */
 
 
+@media screen and (max-width:1200px) 
+{
+   
+   .map 
+  {
+    width: 1000px;
+  }
+  .block-info 
+  {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+  .map 
+  {
+    width: 1000px;
+    height: 1500px;
+    overflow: auto;
+    margin: 0px auto;
+  } 
+  svg 
+  {
+    width: 1920px;
+  }
+  .three 
+  {
+    left: 0;
+  }
+} 
+
 @media screen and (max-width:991px) 
 {
     .navbar-nav 
     {
-      align-items: flex-end;
+      align-items: center;
     }
     .nav-item:not(:last-child) {
       margin-right: 0px;
@@ -492,6 +535,14 @@ border-radius: 50%;
     .navbar-nav 
     {
       flex-direction: row;
+    }
+    .navbar-nav > .nav-item > .nav-link 
+    {
+      font-size: 10px;
+    }
+    .logo-main 
+    {
+      width: 180px;
     }
 }
 @media screen and (max-width: 768px)
@@ -512,14 +563,14 @@ border-radius: 50%;
 }
 @media screen and (max-width: 767px)
 {
-  nav 
+  /* nav 
   {
     flex-direction: column;
     justify-content: center;
-  }
+  } */
   .logo-main 
   {
-    margin-left: 0px;
+    margin-left: 40px;
   }
   .sidebar 
   {
@@ -533,11 +584,23 @@ border-radius: 50%;
   {
     display: block;
     color: #000;
+    width: 100%;
+    text-align: center;
   }
   .navbar-nav > .nav-item > .nav-link 
   {
     color: #000;
   }
+  .navbar-nav > .nav-item > .nav-link:hover, 
+  .navbar-nav > .nav-item > .nav-link:focus 
+  {
+    color: #000;
+  }
+  .navbar-nav > .nav-item > .nav-link 
+  {
+    font-size: 12px;
+  }
+
 }
 @media screen and (max-width: 576px)
 {
@@ -570,9 +633,10 @@ border-radius: 50%;
   {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
   }
+ 
 }
 
 @media screen and (max-width: 480px)
@@ -611,7 +675,7 @@ border-radius: 50%;
   {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content:  space-between;
     align-items: center;
   }
 }
