--- a/wwwroot/css/mybooking.css
+++ b/wwwroot/css/mybooking.css
@@ -258,7 +258,7 @@ ul > li
     font-weight: 300;
     color: #47404f; 
     display: inline-flex;
-    align-items: baseline;
+    align-items: center;
 }
 
 .active 
@@ -276,6 +276,14 @@ background: #0F2027;
   background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027);
 }
 
+.sign-icon-cus {
+  font-size: 30px;
+}
+
+.header-user-dropdown {
+  /* left: -135px !important; */
+  transform: translate3d(-100px, 48px, 0px) !important;
+}
 .section-title 
 {
     color: #fff;
@@ -391,6 +399,9 @@ hr
     flex-direction: row;
 }
 
+.user-icon-width{
+  max-width: 35px;
+}
 #days
 {
     font-size: 14px;
@@ -531,6 +542,12 @@ background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
     min-width: 6rem;
     left: -17px;
     }
+    .logo-main {
+      width: 180px;
+  }
+  .navbar-nav > .nav-item > .nav-link {
+    font-size: 10px;
+}
 }
 
 
@@ -539,7 +556,7 @@ background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
 {
     .navbar-nav 
     {
-      align-items: flex-end;
+      align-items: center;
     }
     .nav-item:not(:last-child) {
       margin-right: 0px;
@@ -578,14 +595,14 @@ background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
 }
 @media screen and (max-width: 767px)
 {
-  nav 
+  /* nav 
   {
     flex-direction: column;
     justify-content: center;
-  }
+  } */
   .logo-main 
   {
-    margin-left: 0px;
+    margin-left: 40px;
     width: 180px;
   }
 
@@ -605,11 +622,27 @@ background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
   {
     display: block;
     color: #000;
+    width: 100%;
+    text-align: center;
   }
   .navbar-nav > .nav-item > .nav-link 
   {
     color: #000;
   }
+  .navbar-nav > .nav-item > .nav-link 
+  {
+    color: #000;
+  }
+  .navbar-nav > .nav-item > .nav-link:hover, 
+  .navbar-nav > .nav-item > .nav-link:focus 
+  {
+    color: #000;
+  }
+  .navbar-nav > .nav-item > .nav-link 
+  {
+    font-size: 12px;
+  }
+
 }
 @media screen and (max-width: 576px)
 {
@@ -642,7 +675,7 @@ background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
   {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
   }
 }
